# mlx-qre

./: .gitignore  CHANGELOG.md  README.md  benchmark_results.md  pyproject.toml
examples/: quickstart.py
mlx_qre/: __init__.py  benchmark.py  channels.py  classical.py  lanczos.py  petz.py  qre.py
tests/: test_lanczos.py  test_qre.py
