[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-qre"
version = "0.1.0"
description = "Quantum Relative Entropy + Petz Recovery toolkit on Apple Silicon via MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sheng-Kai Huang", email = "akai@fawstudio.com"},
]
keywords = [
    "quantum-information",
    "relative-entropy",
    "apple-silicon",
    "gpu",
    "mlx",
    "petz-recovery",
    "quantum-channels",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "mlx>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[project.urls]
Homepage = "https://github.com/akaiHuang/mlx-qre"
Repository = "https://github.com/akaiHuang/mlx-qre"

[tool.setuptools.packages.find]
include = ["mlx_qre*"]
